--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@ngx-translate/http-loader": "^17.0.0",
     "ical.js": "^2.2.1",
     "rxjs": "~7.8.0",
+    "swiper": "^12.0.3",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
